--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+casadi==3.7.0
 do_mpc==4.6.5
-matplotlib==3.9.2
-numpy==1.26.4
-pandas==2.2.3
+matplotlib==3.10.3
+numpy==2.3.1
+pandas==1.4.3
+scipy==1.16.0
 setuptools==75.1.0
-sympy==1.13.3
+sympy==1.13.0
