--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-do_mpc==4.6.5
-matplotlib==3.10.3
-numpy==2.3.1
-pandas==1.4.3
-scipy==1.16.0
-setuptools==75.1.0
-sympy==1.13.0
+do_mpc>=4.6.5
+matplotlib>=3.10.3
+numpy>=2.3.1
+pandas>=1.4.3
+scipy>=1.16.0
+setuptools>=75.1.0
+sympy>=1.13.0
+casadi
